--- a/applications/plot/plot-VS2019.vcxproj.filters
+++ b/applications/plot/plot-VS2019.vcxproj.filters
@@ -10,9 +10,13 @@
     <ClInclude Include="..\..\external\mcc\include\cbw.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Data_process.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="plot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Data_process.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
